--- a/styles/c5_main.css
+++ b/styles/c5_main.css
@@ -1,4 +1,5 @@
 /* custom property */
+
 :root {
 	--global-color-1: #800000;
 }
@@ -21,8 +22,7 @@ a:focus, a:hover {
 }
 /* the styles for the header */
 header{
-	padding-top:1.5em;
-	padding-bottom:2em;
+	padding: 1.5em 0 2em 0;
 	border-bottom:3px solid #931420;
 	background-image: linear-gradient(30deg,#f6bb73,#f6bb73 30%,white 50%,#f6bb73 80%,#f6bb73 100%);
 
@@ -30,12 +30,14 @@ header{
 header h2 {
 	font-size: 175%;
 	color: var(--global-color-1);
-	text-indent: 30px;
+	margin:0;
+
 }
 header h3 {
 	font-size: 130%;
 	font-style: italic;
-	text-indent: 30px;
+	margin:0;
+
 }
 header img {
 	padding-left:30px;
@@ -65,6 +67,7 @@ main h2 {
 	color: var(--global-color-1);
 	font-size: 130%;
 	padding: .5em 0 .25em 0;
+
 }
 main h3 {
 	font-size: 105%;
